--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
           </div>
         </div>
         <div class="container">
-          topページだよーん
-          なんか載せる
-          <a href="">喫茶まとめ</a>
+          <p>htmlとcss勉強中。</p>
           
           
                    </div>
