--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@
         <nav class="nav_content">
           <ul class="nav_list">
             <li class="nav_item"><a href="index.html">TOP</a></li>
-            <li class="nav_item"><a href="food.html">FOOD</a></li>
-            <li class="nav_item"><a href="room.html">ROOM</a></li>
             <li class="nav_item"><a href="kissa.html">KISSA</a></li>
-            <li class="nav_item"><a href="">WATCH</a></li>
             <li class="nav_item"><a href="osanpo.html">OSANPO</a></li>
-              <li class="nav_item"><a href="sneaker.html">SNEAKER</a></li>
+              <li class="nav_item"><a href="">COOK</a></li>
             
           
           </ul>
